--- a/Pokemon Shuffle Save Editor/Properties/Resources.resx
+++ b/Pokemon Shuffle Save Editor/Properties/Resources.resx
@@ -3424,4 +3424,7 @@
   <data name="mega_speedup" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\img\mega_speedup.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="pokemonLevel" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\bin\pokemonLevel.bin;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
 </root>
