--- a/Pokemon Shuffle Save Editor/Properties/Resources.resx
+++ b/Pokemon Shuffle Save Editor/Properties/Resources.resx
@@ -139,6 +139,9 @@
   <data name="stageDataExtra" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\bin\stageDataExtra.bin;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="pokemonLevel" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\bin\pokemonLevel.bin;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
   <data name="MegaStone003" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\img\MegaStone003.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -607,8 +610,14 @@
   <data name="mega_pokemon_719_lo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\img\mega_pokemon_719_lo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="mega_speedup" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\img\mega_speedup.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Plate" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\img\Plate.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="PlateMega" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\img\PlateMega.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="pokemon_000" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\img\pokemon_000.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -2353,6 +2362,21 @@
   <data name="pokemon_479" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\img\pokemon_479.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="pokemon_479_01" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\img\pokemon_479_01.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="pokemon_479_02" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\img\pokemon_479_02.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="pokemon_479_03" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\img\pokemon_479_03.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="pokemon_479_04" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\img\pokemon_479_04.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="pokemon_479_05" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\img\pokemon_479_05.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="pokemon_480" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\img\pokemon_480.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -3420,14 +3444,5 @@
   </data>
   <data name="pokemon_721" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\img\pokemon_721.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="mega_speedup" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\img\mega_speedup.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="pokemonLevel" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\bin\pokemonLevel.bin;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="PlateMega" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\img\PlateMega.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
