--- a/Pokemon Shuffle Save Editor/Properties/Resources.resx
+++ b/Pokemon Shuffle Save Editor/Properties/Resources.resx
@@ -118,12 +118,6 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="mons" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\txt\mons.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
-  </data>
-  <data name="species" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\txt\species.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
-  </data>
   <data name="megaStone" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\bin\megaStone.bin;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
@@ -3459,5 +3453,11 @@
   </data>
   <data name="skill" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\img\skill.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="mons" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\txt\mons.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
+  <data name="species" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\txt\species.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
 </root>
