Edit Pokathlon (dirty)
Included a Bulk Edit code to handle Survival mode (click/ctrl+click).
You need to have a save that has been paused during a survival mode
session for it to have an effect, as I have yet to find how to activate
that "pause" mode.

Added a "pokathlon.txt" file which contains the max/min values of legit
stages for each step (w/ shitty formatting, it's simply 2 lines (min
then max) per step).

Deleted "Reset Resources" button, now it's handled by Ctrl+click on
"(Max) Resources" button.

Now if you close one of the popups w/o pressing Enter or clicking "OK"
button, no edits will be done to your savefile (instead of applying the
default values).

I have yet to find how to enable/disable that "pause" mode for pokathlon
runs.

--- a/Pokemon Shuffle Save Editor/Cheats.resx
+++ b/Pokemon Shuffle Save Editor/Cheats.resx
@@ -120,6 +120,9 @@
   <metadata name="toolTip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <metadata name="toolTip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
   <data name="B_LevelMax.ToolTip" xml:space="preserve">
     <value>Sets everyone of your caught pokemon to their maximum level, and
 gives them the corresponding amount of experience &amp; lollipops.
@@ -181,6 +184,20 @@ than one active at the same time, only one should be affected.</value>
 
 /!\ Manually add at least Espurr, Bulbasaur, Squirtle and charmander,
 or reset stages too.</value>
+  </data>
+  <data name="B_PokathlonStep.ToolTip" xml:space="preserve">
+    <value>Sets the next Survival mode step you'll face to be the 50th one.
+
+Ctrl + Click to select the step you wish to face.
+
+/!\ It'll only works on saves exported after choosing to "Pause" the game
+during Survival mode (does nothing if not).
+
+/!\ Your next opponent is also stored in your savefile, so choosing a step
+which has a fixed opponent (such as 50th Mewtwo) will make you face
+your stored opponent instead of the fixed one, likely allowing you an
+easier win.
+Choose the previous step instead if you want to face the harder opponent.</value>
   </data>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>143</value>
