--- a/Pokemon Shuffle Save Editor/Properties/Resources.resx
+++ b/Pokemon Shuffle Save Editor/Properties/Resources.resx
@@ -3460,4 +3460,7 @@
   <data name="species" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\txt\species.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
+  <data name="pokathlon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\txt\pokathlon.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
 </root>
