--- a/Pokemon Shuffle Save Editor/Cheats.resx
+++ b/Pokemon Shuffle Save Editor/Cheats.resx
@@ -120,6 +120,9 @@
   <metadata name="toolTip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <metadata name="toolTip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
   <data name="B_LevelMax.ToolTip" xml:space="preserve">
     <value>Sets everyone of your caught pokemon to their maximum level, and
 gives them the corresponding amount of experience &amp; lollipops.
@@ -181,15 +184,6 @@ than one active at the same time, only one should be affected.</value>
 
 /!\ Manually add at least Espurr, Bulbasaur, Squirtle and charmander,
 or reset stages too.</value>
-  </data>
-  <data name="B_PokathlonStep.ToolTip" xml:space="preserve">
-    <value>Sets your next Survival mode battle to be the 50th one, against
-Mega Mewtwo Y and with 99 moves left.
-
-/!\ It'll only works on saves exported after choosing to "Pause" the game
-during Survival mode (does nothing if not).
-
-Ctrl + Click to select whichever step, opponent and moves you wish.</value>
   </data>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>143</value>
