--- a/Pokemon Shuffle Save Editor/Properties/Resources.resx
+++ b/Pokemon Shuffle Save Editor/Properties/Resources.resx
@@ -3463,4 +3463,7 @@
   <data name="pokathlon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\txt\pokathlon.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
+  <data name="missionCard" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\bin\MissionCard.bin;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
 </root>
