Added verbose Skill output
Available skills for a Pokémonare now written in full text in a
selectable list.
Hover over that list for skill description.
This adds one resource file, "message_Pokedex_US.bin", from which the
strings are taken. It is found in Message_US folder.
English only for now, won't work with another region's strings.
Updated resource files to v1.3.17 of the game.

--- a/Pokemon Shuffle Save Editor/Properties/Resources.resx
+++ b/Pokemon Shuffle Save Editor/Properties/Resources.resx
@@ -3466,4 +3466,7 @@
   <data name="missionCard" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\bin\MissionCard.bin;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="messagePokedex_US" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\bin\messagePokedex_US.bin;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
 </root>
